examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery`.
//
//   examples/type_system/failing/137_tuple_projection_unresolved_path_unchanged.flx:21:22
//    |
// 21 |     let value: Int = mystery.0
//    |                      ^^^^^^^
//
// Hint:
//   Define it first: let mystery = ...;
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004

fn main() -> Unit {
    let value: Int = mystery.0
}
